# wetness-prediction

./: pyproject.toml
src/wetness_regression/: training.py
src/wetness_regression/dataset/: image_transform.py  load_dataset.py  load_image.py  visualize.py
src/wetness_regression/model/: lr_scheduler.py  multi_task_model.py  regression_model.py  regression_model_1d.py
src/wetness_regression/pipeline/: augmentation.py  inference.py  train.py
src/wetness_regression/utils/: config.py  wrpath.py
