[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wetness-regression"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "wetness regression"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "pandas",
  "lightgbm",
  "torch",
  "matplotlib",
  "seaborn",
  "torchvision",
  "opencv-python",
  "scikit-learn",
  "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]
